--- a/Dani's J.html
+++ b/Dani's J.html
@@ -16,10 +16,10 @@
     <header id="header"> 
         <nav class="menu">
             <ul>
-                <li><a href="https://subtitle1.github.io/index.html/index.html" <b="">Home</a></li>
-                <li><a href="https://subtitle1.github.io/index.html/about.html" <b="">About</a></li>
-                <li><a href="https://subtitle1.github.io/index.html/favorites.html" <b="">What I love</a></li>
-                <li><a href="https://subtitle1.github.io/index.html/contact.html" <b="">Contact</a></li>
+                <li><a href="https://elijah.github.io/index.html/index.html" <b="">Home</a></li>
+                <li><a href="https://elijah.github.io/index.html/about.html" <b="">About</a></li>
+                <li><a href="https://elijah.github.io/index.html/favorites.html" <b="">What I love</a></li>
+                <li><a href="https://elijah.github.io/index.html/contact.html" <b="">Contact</a></li>
             </ul>
         </nav>
     </header> 
